# MM_lecture

./: .gitignore
mm_arena/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml
mm_arena/common/arena/: C025_arena.urdf  crossroad.urdf
mm_arena/common/objects/: base.urdf  bluebase.urdf  bluecube.urdf  greenbase.urdf  greencube.urdf  redbase.urdf  redcube.urdf
mm_arena/common/robots/: gripper.gazebo.xacro  gripper.urdf.xacro  youbot.urdf.xacro
mm_arena/common/sensors/: camera.gazebo.xacro  camera.urdf.xacro  kinect.config.urdf.xacro  kinect.gazebo.urdf.xacro  kinect.urdf.xacro
mm_arena/config/: blue_cube.cfg  green_cube.cfg  red_cube.cfg
mm_arena/launch/: add_cubes.launch  youbot_general.launch  youbot_publisher_general.launch  youbot_simulation.launch
mm_arena/src/: create_colored_point_cloud.cpp
task_04_ik/: CMakeLists.txt
task_04_ik/src/: ForwardKinematics.h  HomogenousTransform.cpp  HomogenousTransform.h  InverseKinematics.h
